Name:    hexyll
Version: 0.1.0.0

Synopsis: A static website compiler library for Hexirp
Description: Please see the README on GitHub at <https://github.com/Hexirp/hexirp-hakyll#readme>

Author:       Hexirp
Maintainer:   https:github.com/Hexirp/hexirp-hakyll
Homepage:     https:github.com/Hexirp/hexirp-hakyll#readme
Bug-Reports:  https:github.com/Hexirp/hexirp-hakyll/issues
License:      Apache-2.0
License-File: LICENSE
Category:     Web

Cabal-Version: >= 1.10
Build-Type:    Simple
Data-Dir:      data

Data-files:
  example/posts/2015-11-28-carpe-diem.markdown
  example/posts/2015-10-07-rosa-rosa-rosam.markdown
  example/posts/2015-12-07-tu-quoque.markdown
  example/posts/2015-08-12-spqr.markdown
  example/site.hs
  example/images/haskell-logo.png
  example/templates/post-list.html
  example/templates/default.html
  example/templates/archive.html
  example/templates/post.html
  example/css/default.css
  example/index.html
  example/about.rst
  example/contact.markdown

Extra-source-files:
  README.md
  ChangeLog.md
  tests/data/embed.html
  tests/data/example.md
  tests/data/example.md.metadata
  tests/data/images/favicon.ico
  tests/data/just-meta.html
  tests/data/just-meta.html.out
  tests/data/partial-helper.html
  tests/data/partial.html
  tests/data/partial.html.out
  tests/data/posts/2010-08-26-birthday.md
  tests/data/posts/2018-09-26.md
  tests/data/posts/2019/05/10/tomorrow.md
  tests/data/russian.md
  tests/data/strip.html
  tests/data/strip.html.out
  tests/data/template.html
  tests/data/template.html.out
  data/templates/atom-item.xml
  data/templates/atom.xml
  data/templates/rss-item.xml
  data/templates/rss.xml

Source-Repository head
  Type:     git
  Location: git://github.com/jaspervdj/hakyll.git

Flag checkExternal
  Description: Include external link checking
  Default:     True

Library
  Ghc-Options:      -Wall
  Hs-Source-Dirs:   src
  Default-language: Haskell2010

  Exposed-Modules:
    Hexyll
    Hexyll.Commands
    Hexyll.Main
    Hexyll.Web.CompressCss
    Hexyll.Web.Feed
    Hexyll.Web.Html
    Hexyll.Web.Html.RelativizeUrls
    Hexyll.Web.Paginate
    Hexyll.Web.Redirect
    Hexyll.Web.Tags
    Hexyll.Web.Template
    Hexyll.Web.Template.Context
    Hexyll.Web.Template.Internal
    Hexyll.Web.Template.Internal.Element
    Hexyll.Web.Template.Internal.Trim
    Hexyll.Web.Template.List

  Other-Modules:
    Hexyll.Check
    Paths_hexyll

  Build-Depends:
    base                 >= 4.8      && < 5,
    binary               >= 0.5      && < 0.10,
    blaze-html           >= 0.5      && < 0.10,
    blaze-markup         >= 0.5.1    && < 0.9,
    bytestring           >= 0.9      && < 0.11,
    containers           >= 0.3      && < 0.7,
    cryptohash           >= 0.7      && < 0.12,
    data-default         >= 0.4      && < 0.8,
    deepseq              >= 1.3      && < 1.5,
    directory            >= 1.0      && < 1.4,
    file-embed           >= 0.0.10.1 && < 0.0.12,
    filepath             >= 1.0      && < 1.5,
    lrucache             >= 1.1.1    && < 1.3,
    mtl                  >= 1        && < 2.3,
    network-uri          >= 2.6      && < 2.7,
    optparse-applicative >= 0.12     && < 0.15,
    parsec               >= 3.0      && < 3.2,
    process              >= 1.6      && < 1.7,
    random               >= 1.0      && < 1.2,
    regex-tdfa           >= 1.1      && < 1.3,
    resourcet            >= 1.1      && < 1.3,
    scientific           >= 0.3.4    && < 0.4,
    tagsoup              >= 0.13.1   && < 0.15,
    template-haskell     >= 2.14     && < 2.15,
    text                 >= 0.11     && < 1.3,
    time                 >= 1.8      && < 1.10,
    time-locale-compat   >= 0.1      && < 0.2,
    unordered-containers >= 0.2      && < 0.3,
    vector               >= 0.11     && < 0.13,
    yaml                 >= 0.8.11   && < 0.12,
    -- core
    hexyll-core

  If flag(checkExternal)
    Build-depends:
      http-conduit >= 2.2    && < 2.4,
      http-types   >= 0.7    && < 0.13
    Cpp-options:
      -DCHECK_EXTERNAL

Test-suite hakyll-tests
  Type:             exitcode-stdio-1.0
  Hs-source-dirs:   tests
  Main-is:          TestSuite.hs
  Ghc-options:      -Wall -threaded
  Default-language: Haskell2010

  Other-modules:
    Hexyll.Core.Runtime.Tests
    Hexyll.Web.CompressCss.Tests
    Hexyll.Web.Html.RelativizeUrls.Tests
    Hexyll.Web.Html.Tests
    Hexyll.Web.Tags.Tests
    Hexyll.Web.Template.Context.Tests
    Hexyll.Web.Template.Tests
    TestSuite.Util

  Build-Depends:
    hexyll,
    QuickCheck                 >= 2.8  && < 2.14,
    tasty                      >= 0.11 && < 1.3,
    tasty-hunit                >= 0.9  && < 0.11,
    tasty-quickcheck           >= 0.8  && < 0.11,
    -- Copy pasted from hakyll dependencies:
    base                 >= 4.8      && < 5,
    bytestring           >= 0.9      && < 0.11,
    containers           >= 0.3      && < 0.7,
    filepath             >= 1.0      && < 1.5,
    text                 >= 0.11     && < 1.3,
    unordered-containers >= 0.2      && < 0.3,
    yaml                 >= 0.8.11   && < 0.12,
    -- core
    hexyll-core

  If flag(checkExternal)
    Cpp-options:
      -DCHECK_EXTERNAL
